--- a/src/main/frontend/src/App.css
+++ b/src/main/frontend/src/App.css
@@ -26,12 +26,16 @@ button {
 
 .results-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  margin: 20px;
+  gap: 16px;
+  padding: 16px;
+  flex-wrap: wrap;
 }
 
 .result-item {
+  flex: 1 0 calc(33.33% - 16px);
+  max-width: calc(33.33% - 16px);
+  height: auto;
+  object-fit: cover;
   background-color: #cbd5e0; /* Lighter background color */
   padding: 10px;
   border-radius: 5px;
